--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -2,21 +2,67 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "62e79c53",
+   "execution_count": 7,
+   "id": "27be76c3",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /home/ec2-user/anaconda3/envs/tensorflow_p36/gpu_cuda10.0/lib/python3.6/site-packages/tensorflow_core/__init__.py:1473: The name tf.estimator.inputs is deprecated. Please use tf.compat.v1.estimator.inputs instead.\n",
+      "\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-10-16 02:43:03,426\tINFO services.py:1252 -- View the Ray dashboard at \u001b[1m\u001b[32mhttp://127.0.0.1:8265\u001b[39m\u001b[22m\n",
-      "2021-10-16 02:43:05,529\tINFO trainer.py:741 -- Tip: set framework=tfe or the --eager flag to enable TensorFlow eager execution\n",
-      "2021-10-16 02:43:05,530\tINFO ppo.py:165 -- In multi-agent mode, policies will be optimized sequentially by the multi-GPU optimizer. Consider setting simple_optimizer=True if this doesn't work for you.\n",
-      "2021-10-16 02:43:05,531\tINFO trainer.py:760 -- Current log_level is WARN. For more information, set 'log_level': 'INFO' / 'DEBUG' or use the -v and -vv flags.\n",
-      "\u001b[2m\u001b[36m(pid=43064)\u001b[0m 2021-10-16 02:43:08.790299: E tensorflow/stream_executor/cuda/cuda_driver.cc:271] failed call to cuInit: CUDA_ERROR_NO_DEVICE: no CUDA-capable device is detected\n",
-      "2021-10-16 02:43:13,630\tWARNING trainer_template.py:186 -- `execution_plan` functions should accept `trainer`, `workers`, and `config` as args!\n",
-      "2021-10-16 02:43:13,632\tWARNING util.py:57 -- Install gputil for GPU system monitoring.\n"
+      "2021-11-04 02:15:19,903\tINFO services.py:1252 -- View the Ray dashboard at \u001b[1m\u001b[32mhttp://127.0.0.1:8266\u001b[39m\u001b[22m\n",
+      "2021-11-04 02:15:22,142\tINFO trainer.py:741 -- Tip: set framework=tfe or the --eager flag to enable TensorFlow eager execution\n",
+      "2021-11-04 02:15:22,143\tINFO ppo.py:165 -- In multi-agent mode, policies will be optimized sequentially by the multi-GPU optimizer. Consider setting simple_optimizer=True if this doesn't work for you.\n",
+      "2021-11-04 02:15:22,144\tINFO trainer.py:760 -- Current log_level is WARN. For more information, set 'log_level': 'INFO' / 'DEBUG' or use the -v and -vv flags.\n",
+      "\u001b[2m\u001b[36m(pid=5367)\u001b[0m WARNING:tensorflow:From /home/ec2-user/anaconda3/envs/tensorflow_p36/gpu_cuda10.0/lib/python3.6/site-packages/tensorflow_core/__init__.py:1473: The name tf.estimator.inputs is deprecated. Please use tf.compat.v1.estimator.inputs instead.\n",
+      "\u001b[2m\u001b[36m(pid=5367)\u001b[0m \n",
+      "\u001b[2m\u001b[36m(pid=5367)\u001b[0m 2021-11-04 02:15:30.985507: E tensorflow/stream_executor/cuda/cuda_driver.cc:318] failed call to cuInit: CUDA_ERROR_NO_DEVICE: no CUDA-capable device is detected\n",
+      "\u001b[2m\u001b[36m(pid=5367)\u001b[0m WARNING:tensorflow:From /home/ec2-user/anaconda3/envs/tensorflow_p36/gpu_cuda10.0/lib/python3.6/site-packages/tensorflow_core/python/ops/resource_variable_ops.py:1630: calling BaseResourceVariable.__init__ (from tensorflow.python.ops.resource_variable_ops) with constraint is deprecated and will be removed in a future version.\n",
+      "\u001b[2m\u001b[36m(pid=5367)\u001b[0m Instructions for updating:\n",
+      "\u001b[2m\u001b[36m(pid=5367)\u001b[0m If using Keras pass *_constraint arguments to layers.\n",
+      "\u001b[2m\u001b[36m(pid=5367)\u001b[0m WARNING:tensorflow:From /home/ec2-user/anaconda3/envs/tensorflow_p36/gpu_cuda10.0/lib/python3.6/site-packages/tensorflow_core/python/ops/math_grad.py:1424: where (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+      "\u001b[2m\u001b[36m(pid=5367)\u001b[0m Instructions for updating:\n",
+      "\u001b[2m\u001b[36m(pid=5367)\u001b[0m Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
+      "\u001b[2m\u001b[36m(pid=5367)\u001b[0m WARNING:tensorflow:From /home/ec2-user/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/horovod/tensorflow/__init__.py:163: The name tf.global_variables is deprecated. Please use tf.compat.v1.global_variables instead.\n",
+      "\u001b[2m\u001b[36m(pid=5367)\u001b[0m \n",
+      "\u001b[2m\u001b[36m(pid=5367)\u001b[0m WARNING:tensorflow:From /home/ec2-user/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/horovod/tensorflow/__init__.py:189: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+      "\u001b[2m\u001b[36m(pid=5367)\u001b[0m \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2m\u001b[36m(RolloutWorker pid=5367)\u001b[0m [2021-11-04 02:15:34.033 ip-172-16-83-177:5367 INFO utils.py:27] RULE_JOB_STOP_SIGNAL_FILENAME: None\n",
+      "\u001b[2m\u001b[36m(RolloutWorker pid=5367)\u001b[0m [2021-11-04 02:15:34.164 ip-172-16-83-177:5367 INFO profiler_config_parser.py:111] Unable to find config at /opt/ml/input/config/profilerconfig.json. Profiler is disabled.\n",
+      "WARNING:tensorflow:From /home/ec2-user/anaconda3/envs/tensorflow_p36/gpu_cuda10.0/lib/python3.6/site-packages/tensorflow_core/python/ops/resource_variable_ops.py:1630: calling BaseResourceVariable.__init__ (from tensorflow.python.ops.resource_variable_ops) with constraint is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "If using Keras pass *_constraint arguments to layers.\n",
+      "WARNING:tensorflow:From /home/ec2-user/anaconda3/envs/tensorflow_p36/gpu_cuda10.0/lib/python3.6/site-packages/tensorflow_core/python/ops/math_grad.py:1424: where (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
+      "WARNING:tensorflow:From /home/ec2-user/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/horovod/tensorflow/__init__.py:163: The name tf.global_variables is deprecated. Please use tf.compat.v1.global_variables instead.\n",
+      "\n",
+      "WARNING:tensorflow:From /home/ec2-user/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/horovod/tensorflow/__init__.py:189: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+      "\n",
+      "[2021-11-04 02:16:09.337 ip-172-16-83-177:130210 INFO utils.py:27] RULE_JOB_STOP_SIGNAL_FILENAME: None\n",
+      "[2021-11-04 02:16:09.370 ip-172-16-83-177:130210 INFO profiler_config_parser.py:111] Unable to find config at /opt/ml/input/config/profilerconfig.json. Profiler is disabled.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2021-11-04 02:16:09,912\tWARNING trainer_template.py:186 -- `execution_plan` functions should accept `trainer`, `workers`, and `config` as args!\n",
+      "2021-11-04 02:16:09,913\tINFO trainable.py:112 -- Trainable.setup took 47.772 seconds. If your trainable is slow to initialize, consider setting reuse_actors=True to reduce actor creation overheads.\n"
      ]
     }
    ],
@@ -44,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "2cfaf0ed",
+   "id": "c4eb1a7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,18 +99,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "d15cef49",
+   "execution_count": 6,
+   "id": "49a1c8ae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import torch"
+    "21 % 9\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b754e430",
+   "id": "ee75e53a",
    "metadata": {},
    "outputs": [],
    "source": [
