--- a/PricingDeepQ.ipynb
+++ b/PricingDeepQ.ipynb
@@ -231,17 +231,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "49"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "price_grid = np.arange(10, 500, 10)\n",
+    "    \n",
+    "##Since for the discrete action, the convention is 0,1,2,3, need to convert action to same scale\n",
+    "dim_action = len(price_grid)\n",
+    "dim_action"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(40,)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from Envs import SinglePriceEnv as p\n",
+    "env = p.PriceEnv()\n",
+    "state = env.reset()\n",
+    "state.shape"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "conda_pytorch_latest_p36",
    "language": "python",
-   "name": "python3"
+   "name": "conda_pytorch_latest_p36"
   },
   "language_info": {
    "codemirror_mode": {
@@ -253,7 +294,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
