--- a/PricingRay.ipynb
+++ b/PricingRay.ipynb
@@ -6,18 +6,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From /Users/mingjunwang/opt/miniconda3/lib/python3.8/site-packages/tensorflow/python/compat/v2_compat.py:96: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "non-resource variables are not supported in the long term\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "<module 'Envs.SinglePriceEnv' from '/Users/mingjunwang/Documents/Backup/RL/Envs/SinglePriceEnv.py'>"
+       "<module 'Envs.SinglePriceEnv' from '/home/ec2-user/SageMaker/RL/Envs/SinglePriceEnv.py'>"
       ]
      },
      "execution_count": 1,
@@ -45,22 +36,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "File descriptor limit 256 is too low for production servers and may result in connection errors. At least 8192 is recommended. --- Fix with 'ulimit -n 8192'\n",
-      "2021-02-20 16:16:10,459\tINFO services.py:1171 -- View the Ray dashboard at \u001b[1m\u001b[32mhttp://127.0.0.1:8265\u001b[39m\u001b[22m\n"
+      "2022-01-25 21:09:35,447\tINFO services.py:1272 -- View the Ray dashboard at \u001b[1m\u001b[32mhttp://127.0.0.1:8267\u001b[39m\u001b[22m\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'node_ip_address': '192.168.0.23',\n",
-       " 'raylet_ip_address': '192.168.0.23',\n",
-       " 'redis_address': '192.168.0.23:6379',\n",
-       " 'object_store_address': '/tmp/ray/session_2021-02-20_16-16-09_964235_94145/sockets/plasma_store',\n",
-       " 'raylet_socket_name': '/tmp/ray/session_2021-02-20_16-16-09_964235_94145/sockets/raylet',\n",
-       " 'webui_url': '127.0.0.1:8265',\n",
-       " 'session_dir': '/tmp/ray/session_2021-02-20_16-16-09_964235_94145',\n",
-       " 'metrics_export_port': 62359,\n",
-       " 'node_id': '7c3e739dc065bfa854f01387bf18d9deff9da463'}"
+       "{'node_ip_address': '172.16.0.96',\n",
+       " 'raylet_ip_address': '172.16.0.96',\n",
+       " 'redis_address': '172.16.0.96:10161',\n",
+       " 'object_store_address': '/tmp/ray/session_2022-01-25_21-09-33_355004_44246/sockets/plasma_store',\n",
+       " 'raylet_socket_name': '/tmp/ray/session_2022-01-25_21-09-33_355004_44246/sockets/raylet',\n",
+       " 'webui_url': '127.0.0.1:8267',\n",
+       " 'session_dir': '/tmp/ray/session_2022-01-25_21-09-33_355004_44246',\n",
+       " 'metrics_export_port': 52208,\n",
+       " 'node_id': '6f266a4f9cae547f99b68eabae284df3e33521530c6f3fc28d7aee84'}"
       ]
      },
      "execution_count": 2,
@@ -3036,9 +3026,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "conda_pytorch_latest_p36",
    "language": "python",
-   "name": "python3"
+   "name": "conda_pytorch_latest_p36"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3050,7 +3040,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
