--- a/StoreRecDRL.ipynb
+++ b/StoreRecDRL.ipynb
@@ -228,9 +228,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "conda_pytorch_latest_p36",
    "language": "python",
-   "name": "python3"
+   "name": "conda_pytorch_latest_p36"
   },
   "language_info": {
    "codemirror_mode": {
@@ -242,7 +242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
