--- a/DDPG/DDPG.ipynb
+++ b/DDPG/DDPG.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49035155",
+   "id": "c6113d45",
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
     "            self.critic.zero_grad()\n",
     "            self.actor.zero_grad()\n",
     "            \n",
-    "            done= False\n",
+    "            done = False\n",
     "            state = env.reset()       \n",
     "            total_reward= 0\n",
     "            \n",
@@ -175,7 +175,8 @@
     "                state_batch, action_batch, reward_batch, state_new_batch, done_batch = self.buffer.sample_batch()\n",
     "                        \n",
     "                ##Update the critic\n",
-    "                target = t.tensor(reward_batch).view(-1,1)+self.gamma*self.critic(t.tensor(state_new_batch).float(),self.actor(t.tensor(state_new_batch).float()))*t.tensor(done_batch).view(-1,1)\n",
+    "                with t.no_grad():\n",
+    "                    target = t.tensor(reward_batch).view(-1,1)+self.gamma*self.critic(t.tensor(state_new_batch).float(),self.actor(t.tensor(state_new_batch).float()))*t.tensor(done_batch).view(-1,1)\n",
     "                preds = self.critic(t.tensor(state_batch).float(), t.tensor(action_batch).float())\n",
     "        \n",
     "                loss_critic = t.sum((target - preds)**2)\n",
@@ -203,14 +204,14 @@
     "    dim_state = env.observation_space.shape[0]\n",
     "    dim_action = env.action_space.shape[0]\n",
     "    print(dim_state,dim_action)\n",
-    "    agent = Agent(env,3,1, 256, 256, 1e-5, 0.99, 3000, maxm_iters=1000)\n",
+    "    agent = Agent(env,3,1, 256, 256, 1e-5, 0.99, 3000, maxm_iters=200)\n",
     "    agent.train()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "239aa789",
+   "id": "43c522e6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -218,9 +219,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_pytorch_latest_p36",
+   "display_name": "conda_tensorflow_p36",
    "language": "python",
-   "name": "conda_pytorch_latest_p36"
+   "name": "conda_tensorflow_p36"
   },
   "language_info": {
    "codemirror_mode": {
