--- a/DDPG/Untitled1.ipynb
+++ b/DDPG/Untitled1.ipynb
@@ -2,10 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0e253afb",
+   "execution_count": 13,
+   "id": "3aeeb1ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "usage: __main__.py [-h] [--mode MODE] [--env_name ENV_NAME] [--tau TAU]\n",
+      "                   [--target_update_interval TARGET_UPDATE_INTERVAL]\n",
+      "                   [--test_iteration TEST_ITERATION]\n",
+      "                   [--learning_rate LEARNING_RATE] [--gamma GAMMA]\n",
+      "                   [--capacity CAPACITY] [--batch_size BATCH_SIZE]\n",
+      "                   [--seed SEED] [--random_seed RANDOM_SEED]\n",
+      "                   [--sample_frequency SAMPLE_FREQUENCY] [--render RENDER]\n",
+      "                   [--log_interval LOG_INTERVAL] [--load LOAD]\n",
+      "                   [--render_interval RENDER_INTERVAL]\n",
+      "                   [--exploration_noise EXPLORATION_NOISE]\n",
+      "                   [--max_episode MAX_EPISODE] [--print_log PRINT_LOG]\n",
+      "                   [--update_iteration UPDATE_ITERATION]\n",
+      "__main__.py: error: unrecognized arguments: -f /home/ec2-user/.local/share/jupyter/runtime/kernel-e873691c-ce84-44b5-a399-bb0fd63693da.json\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "2",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ec2-user/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/IPython/core/interactiveshell.py:3351: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+     ]
+    }
+   ],
    "source": [
     "import argparse\n",
     "from itertools import count\n",
@@ -273,42 +310,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1a19e813",
+   "execution_count": 9,
+   "id": "54cbd3e7",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1682699f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8cded9a3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "afa54b29",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.8882656], dtype=float32)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dim_state = env.observation_space.shape[0]\n",
+    "dim_action = env.action_space\n",
+    "dim_action.sample()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_pytorch_latest_p36",
+   "display_name": "conda_tensorflow_p36",
    "language": "python",
-   "name": "conda_pytorch_latest_p36"
+   "name": "conda_tensorflow_p36"
   },
   "language_info": {
    "codemirror_mode": {
