--- a/TrainANDTune_2.ipynb
+++ b/TrainANDTune_2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "27be76c3",
+   "id": "80b8de62",
    "metadata": {},
    "outputs": [
     {
@@ -89,40 +89,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "c4eb1a7d",
+   "execution_count": null,
+   "id": "c4e79f75",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tensorflow"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "49a1c8ae",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "21 % 9\n",
+    "# Import the RL algorithm (Trainer) we would like to use.\n",
+    "from ray.rllib.agents.ppo import PPOTrainer\n",
+    "\n",
+    "# Configure the algorithm.\n",
+    "config = {\n",
+    "    # Environment (RLlib understands openAI gym registered strings).\n",
+    "    \"env\": \"Taxi-v3\",\n",
+    "    # Use 2 environment workers (aka \"rollout workers\") that parallelly\n",
+    "    # collect samples from their own environment clone(s).\n",
+    "    \"num_workers\": 2,\n",
+    "    # Change this to \"framework: torch\", if you are using PyTorch.\n",
+    "    # Also, use \"framework: tf2\" for tf2.x eager execution.\n",
+    "    \"framework\": \"tf\",\n",
+    "    # Tweak the default model provided automatically by RLlib,\n",
+    "    # given the environment's observation- and action spaces.\n",
+    "    \"model\": {\n",
+    "        \"fcnet_hiddens\": [64, 64],\n",
+    "        \"fcnet_activation\": \"relu\",\n",
+    "    },\n",
+    "    # Set up a separate evaluation worker set for the\n",
+    "    # `trainer.evaluate()` call after training (see below).\n",
+    "    \"evaluation_num_workers\": 1,\n",
+    "    # Only for evaluation runs, render the env.\n",
+    "    \"evaluation_config\": {\n",
+    "        \"render_env\": True,\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "# Create our RLlib Trainer.\n",
+    "trainer = PPOTrainer(config=config)\n",
+    "#\n",
+    "agent = PPOTrainer(config, \"CartPole-v1\")\n",
+    "\n",
+    "# Run it for n training iterations. A training iteration includes\n",
+    "# parallel sample collection by the environment workers as well as\n",
+    "# loss calculation on the collected batch and a model update.\n",
+    "for _ in range(3):\n",
+    "    print(trainer.train())\n",
+    "\n",
+    "# Evaluate the trained Trainer (and render each timestep to the shell's\n",
+    "# output).\n",
+    "trainer.evaluate()\n",
+    "\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ee75e53a",
+   "id": "bd40625c",
    "metadata": {},
    "outputs": [],
    "source": [
