--- a/DDPG/DDPG-ExplorationTarget.ipynb
+++ b/DDPG/DDPG-ExplorationTarget.ipynb
@@ -421,10 +421,11 @@
     "        \n",
     "\n",
     "class Actor(nn.Module):\n",
-    "    def __init__(self, dim_state, dim_action, fc1, fc2, alpha, max_action, checkpoint='actor' ):\n",
+    "    def __init__(self, dim_state, dim_action, fc1, fc2, alpha, min_action, max_action, checkpoint='actor_ddpg_v2' ):\n",
     "        super(Actor, self).__init__()\n",
     "        self.dim_state = dim_state\n",
     "        self.dim_action = dim_action\n",
+    "        self.min_action = min_action\n",
     "        self.max_action = max_action\n",
     "        \n",
     "        self.linear1 = nn.Linear(dim_state, fc1)\n",
@@ -441,8 +442,8 @@
     "        \n",
     "        output = f.relu(self.linear1(output))\n",
     "        output = f.relu(self.linear2(output))\n",
-    "        output = t.tanh(self.linear3(output)) * self.max_action\n",
-    "        \n",
+    "        #output = t.tanh(self.linear3(output)) * self.max_action\n",
+    "        output = t.clamp(self.linear3(output), self.min_action, self.max_action)\n",
     "        return output\n",
     "    \n",
     "    def saveCheckpoint(self):\n",
@@ -454,15 +455,15 @@
     "        self.load_state_dict(t.load(self.path))\n",
     "    \n",
     "class Critic(nn.Module):   \n",
-    "    def __init__(self, dim_state, dim_action, fc1, fc2, alpha,checkpoint='critic'):\n",
+    "    def __init__(self, dim_state, dim_action, fc1, fc2, alpha,checkpoint='critic_ddpg_v2'):\n",
     "        super(Critic, self).__init__()\n",
     "        self.dim_state = dim_state\n",
     "        self.dim_action = dim_action\n",
     "        self.path = checkpoint\n",
     "        \n",
     "        self.linear1 = nn.Linear(dim_state+ dim_action, fc1)\n",
-    "        self.linear2 = nn.Linear(fc1, fc2)\n",
-    "        self.linear3 = nn.Linear(fc2,1)\n",
+    "        #self.linear2 = nn.Linear(fc1, fc2)\n",
+    "        self.linear3 = nn.Linear(fc1,1)\n",
     "        self.optimizer = optim.Adam(self.parameters(), lr = alpha, weight_decay=1e-4)\n",
     "        self.device = t.device('cpu' if t.cuda.is_available() else 'cpu')\n",
     "        self.to(self.device)\n",
@@ -472,7 +473,7 @@
     "        action = action.to(self.device)\n",
     "        \n",
     "        output = t.relu(self.linear1(t.cat((state, action), dim=1)))\n",
-    "        output = t.relu(self.linear2(output))\n",
+    "        #output = t.relu(self.linear2(output))\n",
     "        output = self.linear3(output)\n",
     "        \n",
     "        return output\n",
@@ -489,13 +490,12 @@
     "class replayBuffer():\n",
     "    def __init__(self, maxm_size, dim_state, dim_action):\n",
     "        self.counter = 0\n",
-    "        self.maxm_size = maxm_size\n",
     "        self.state_mem = np.zeros((maxm_size, dim_state))\n",
     "        self.action_mem = np.zeros((maxm_size, dim_action))\n",
     "        self.reward_mem = np.zeros(maxm_size)\n",
     "        self.state_new_mem = np.zeros((maxm_size, dim_state))\n",
-    "        self.done_mem = np.zeros(maxm_size, dtype=np.bool)\n",
-    "        \n",
+    "        self.done_mem = np.zeros(maxm_size)\n",
+    "        self.maxm_size = maxm_size\n",
     "        \n",
     "    def store_Transaction(self, state, action, reward, state_new, done):\n",
     "        index = self.counter % self.maxm_size\n",
@@ -522,21 +522,21 @@
     "        \n",
     "    \n",
     "class Agent():\n",
-    "    def __init__(self, env, dim_state, dim_action, fc1, fc2, alpha, gamma,max_action, maxm_size, maxm_iters=50, batch_size=64):\n",
+    "    def __init__(self, env, dim_state, dim_action, fc1, fc2, alpha, gamma,min_action, max_action, maxm_size, maxm_iters=50, batch_size=64):\n",
     "        self.dim_state = dim_state\n",
     "        self.dim_action = dim_action\n",
     "        self.maxm_iters = maxm_iters\n",
     "        self.device = t.device('cpu' if t.cuda.is_available() else 'cpu')\n",
     "        \n",
-    "        self.actor=Actor(dim_state, dim_action, fc1, fc2, max_action, alpha,checkpoint='actor').to(self.device)\n",
+    "        self.actor=Actor(dim_state, dim_action, fc1, fc2, alpha, min_action, max_action, checkpoint='actor').to(self.device)\n",
     "        self.critic=Critic(dim_state, dim_action, fc1, fc2, alpha,checkpoint='critic').to(self.device)\n",
-    "        self.tau = 0.001\n",
+    "        self.tau = 0.005\n",
     "\n",
     "        #Initilize the target networks           \n",
-    "        self.actor_t = Actor(dim_state, dim_action, fc1, fc2, max_action, alpha,checkpoint='actor_t').to(self.device)\n",
+    "        self.actor_t = Actor(dim_state, dim_action, fc1, fc2, alpha, min_action, max_action, checkpoint='actor').to(self.device)\n",
     "        self.actor_t.load_state_dict(self.actor.state_dict())\n",
     "        \n",
-    "        self.critic_t = Critic(dim_state, dim_action, fc1, fc2, alpha,checkpoint='critic_t').to(self.device)\n",
+    "        self.critic_t = Critic(dim_state, dim_action, fc1, fc2, alpha,checkpoint='critic').to(self.device)\n",
     "        self.critic_t.load_state_dict(self.critic.state_dict())\n",
     "        \n",
     "        self.buffer = replayBuffer(maxm_size, dim_state, dim_action) # maxm_size, dim_state, dim_action):\n",
@@ -552,106 +552,107 @@
     "        for i in range(len(running_avg)):\n",
     "            running_avg[i] = np.mean(scores[max(0, i-100):(i+1)])\n",
     "        plt.plot(x, running_avg)\n",
-    "        plt.title('Running average of previous 100 scores')\n",
-    "        #plt.savefig(figure_file)\n",
+    "        #plt.title('Running average of previous 100 scores')\n",
+    "        plt.savefig('ddpg_v2.png')\n",
     "        \n",
-    "    def update_target_net(self):\n",
-    "        actor_params = self.actor.named_parameters()\n",
-    "        critic_params = self.critic.named_parameters()\n",
-    "        target_actor_params = self.actor_t.named_parameters()\n",
-    "        target_critic_params = self.critic_t.named_parameters()\n",
-    "\n",
-    "        critic_state_dict = dict(critic_params)\n",
-    "        actor_state_dict = dict(actor_params)\n",
-    "        target_critic_state_dict = dict(target_critic_params)\n",
-    "        target_actor_state_dict = dict(target_actor_params)\n",
-    "\n",
-    "        for name in critic_state_dict:\n",
-    "            critic_state_dict[name] = self.tau*critic_state_dict[name].clone() + \\\n",
-    "                                (1-self.tau)*target_critic_state_dict[name].clone()\n",
-    "\n",
-    "        for name in actor_state_dict:\n",
-    "             actor_state_dict[name] = self.tau*actor_state_dict[name].clone() + \\\n",
-    "                                 (1-self.tau)*target_actor_state_dict[name].clone()\n",
-    "\n",
-    "        self.critic_t.load_state_dict(critic_state_dict)\n",
-    "        self.actor_t.load_state_dict(actor_state_dict)\n",
-    "    \n",
-    "    def update_model(self):\n",
-    "        if self.buffer.counter >= self.batch_size:\n",
-    "            state_batch, action_batch, reward_batch, state_new_batch, done_batch = self.buffer.sample_batch()\n",
-    "                    \n",
-    "            state_batch = t.tensor(state_batch, dtype=t.float).to(self.actor.device)\n",
-    "            action_batch = t.tensor(action_batch, dtype=t.float).to(self.actor.device)\n",
-    "            reward_batch = t.tensor(reward_batch, dtype=t.float).to(self.actor.device).view(-1,1)\n",
-    "            state_new_batch = t.tensor(state_new_batch, dtype=t.float).to(self.actor.device)\n",
-    "            done_batch = t.tensor(done_batch, dtype=t.float).to(self.actor.device).view(-1,1)   \n",
-    "            print(done_batch.dtype)\n",
-    "                        \n",
-    "            ##Update the critic\n",
-    "            #with t.no_grad():\n",
-    "            target = reward_batch + self.gamma*self.critic_t(state_new_batch,self.actor_t(state_new_batch))*done_batch\n",
-    "            Qs = self.critic(state_batch, action_batch)\n",
-    "            loss_critic = self.loss(target, Qs)\n",
-    "            self.critic.optimizer.zero_grad()\n",
-    "            loss_critic.backward()\n",
-    "            self.critic.optimizer.step()\n",
-    "      \n",
-    "            ##Update the actor\n",
-    "            loss_actor = -self.critic(state_batch, self.actor(state_batch))\n",
-    "            loss_actor = loss_actor.mean()\n",
-    "            self.actor.optimizer.zero_grad()\n",
-    "            loss_actor.backward()                    \n",
-    "            self.actor.optimizer.step()                    \n",
-    "                  \n",
-    "            self.update_target_net()\n",
-    "        else:\n",
-    "            return       \n",
+    "    def update_parms(self):\n",
+    "        \n",
+    "        critic_dict = dict(self.critic_t.named_parameters())\n",
+    "        critic_t_dict = dict(self.critic.named_parameters())\n",
+    "        \n",
+    "        actor_t_dict = dict(self.actor_t.named_parameters())\n",
+    "        actor_dict = dict(self.actor.named_parameters())\n",
+    "        \n",
+    "        #Update the critic\n",
+    "        for i in critic_dict:\n",
+    "            critic_dict[i] = self.tau*critic_dict[i].clone() + (1-self.tau)*critic_t_dict[i].clone()\n",
+    "        self.critic_t.load_state_dict(critic_dict)\n",
+    "        \n",
+    "        #Update the actor\n",
+    "        for j in actor_dict:\n",
+    "            actor_dict[j] = self.tau*actor_dict[j].clone() + (1-self.tau)*actor_t_dict[j].clone()\n",
+    "        self.actor_t.load_state_dict(actor_dict)\n",
     "           \n",
     "    def learn(self):\n",
+    "\n",
     "        reward_list = []  \n",
     "        n=0\n",
-    "        \n",
+    "           \n",
     "        for i in range(self.maxm_iters):\n",
-    "            length = 0\n",
-    "            self.noise.reset()            \n",
+    "            self.noise.reset()\n",
+    "            \n",
     "            done= False\n",
     "            state = self.env.reset()       \n",
     "            total_reward= 0\n",
     "            \n",
-    "            while not done:\n",
-    "                length+=1\n",
-    "                n+=1                           \n",
-    "                action = self.actor(t.tensor(state).float().to(self.device)).cpu().detach().numpy()\n",
-    "                action += np.random.normal(0, 0.1, size=env.action_space.shape[0]) #+ self.noise()\n",
-    "                action = action.clip(self.env.action_space.low, self.env.action_space.high)\n",
+    "            while not done:   \n",
+    "                n+=1\n",
+    "                self.critic.train()\n",
+    "                self.actor.train()\n",
+    "                \n",
+    "                self.critic.optimizer.zero_grad()\n",
+    "                self.actor.optimizer.zero_grad()\n",
+    "                \n",
+    "                action = self.actor(t.tensor(state).float().to(self.device)).cpu().detach().numpy() + self.noise()\n",
+    "                if n % 100 == 0:\n",
+    "                    #print(f'state: {state}', ' ', f'action {n}: ', action)\n",
+    "                    pass\n",
+    "\n",
     "                state_new, reward, done, _ = self.env.step(action)\n",
     "                total_reward+=reward\n",
-    "                #print(reward)\n",
     "        \n",
     "                self.buffer.store_Transaction(state, action, reward, state_new, done)\n",
-    "                self.update_model()\n",
+    "\n",
+    "                if self.buffer.counter >= self.batch_size:\n",
+    "                    state_batch, action_batch, reward_batch, state_new_batch, done_batch = self.buffer.sample_batch()\n",
+    "                    \n",
+    "                    state_batch = t.tensor(state_batch, dtype=t.float).to(self.actor.device)\n",
+    "                    action_batch = t.tensor(action_batch, dtype=t.float).to(self.actor.device)\n",
+    "                    reward_batch = t.tensor(reward_batch, dtype=t.float).to(self.actor.device).view(-1,1)\n",
+    "                    state_new_batch = t.tensor(state_new_batch, dtype=t.float).to(self.actor.device)\n",
+    "                    done_batch = t.tensor(done_batch, dtype=t.float).to(self.actor.device).view(-1,1)                    \n",
+    "                        \n",
+    "                    ##Update the critic\n",
+    "                    with t.no_grad():\n",
+    "                        #target = t.tensor(reward_batch)  \n",
+    "                        target = reward_batch.clone().detach()\n",
+    "                        target += self.gamma*self.critic_t(state_new_batch,self.actor_t(state_new_batch))*done_batch\n",
+    "                    preds = self.critic(state_batch, action_batch)\n",
+    "\n",
+    "                    loss_critic = self.loss(target, preds)\n",
+    "                    loss_critic.backward()\n",
+    "                    self.critic.optimizer.step()\n",
+    "        \n",
+    "                    ##Update the actor\n",
+    "                    loss_actor = -self.critic(state_batch, self.actor(state_batch))\n",
+    "                    loss_actor = loss_actor.mean()\n",
+    "                    loss_actor.backward()                    \n",
+    "                    self.actor.optimizer.step()                    \n",
+    "                    \n",
+    "                    self.update_parms()\n",
     "        \n",
     "                state = state_new\n",
-    "\n",
+    "            if i % 100 ==0:\n",
+    "                print(f'Episode {i} reward: ', total_reward)\n",
     "            reward_list.append(total_reward)\n",
-    "            print(total_reward)\n",
-    "           \n",
+    "        \n",
     "        x = [i+1 for i in range(self.maxm_iters)]\n",
     "        self.plot_learning_curve(x, reward_list)\n",
     "        \n",
     "if __name__ == '__main__':\n",
     "    env = gym.make('Pendulum-v1')\n",
-    "    #env = gym.make('MountainCarContinuous-v0')\n",
+    "    \n",
     "    dim_state = env.observation_space.shape[0]\n",
     "    dim_action = env.action_space.shape[0]\n",
     "    max_action = float(env.action_space.high[0])\n",
+    "    min_action = float(env.action_space.low[0])\n",
     "    print('dim_state: ', dim_state)\n",
     "    print ('dim_action: ', dim_action)\n",
     "    print('action sample: ', env.action_space.sample())\n",
-    "    #      (self, env, dim_state, dim_action, fc1, fc2, alpha, gamma,max_action, maxm_size, maxm_iters=50, batch_size=126):\n",
-    "    agent = Agent(env,dim_state,dim_action, 400, 300, 0.00001, 0.99,max_action, 100000, maxm_iters=2000)\n",
-    "    agent.learn()\n"
+    "    agent = Agent(env,dim_state,dim_action, 200, 100, 1e-4, 0.99,min_action, max_action, 1000000, maxm_iters=1000)\n",
+    "    agent.learn()\n",
+    "    agent.actor.saveCheckpoint()\n",
+    "    agent.critic.saveCheckpoint()\n"
    ]
   },
   {
