--- a/ppo/ppo.ipynb
+++ b/ppo/ppo.ipynb
@@ -7,7 +7,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "b20290b2",
+   "id": "e086b71f",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
@@ -20,7 +20,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "f5e0e978",
+   "id": "88cf29e0",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
@@ -36,7 +36,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "58480b01",
+   "id": "f65d08f8",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)![download.png](attachment:download.png)"
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53e7be37",
+   "id": "b114cb28",
    "metadata": {},
    "source": [
     "It means that you use a tensor or its part to compute a part of the same tensor. Code bellow demonstrates this mistake.\n",
@@ -62,7 +62,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "a1283d91",
+   "id": "3a91854e",
    "metadata": {},
    "source": [
     "### Trying to backward through the graph a second time:\n",
@@ -73,62 +73,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84662850",
+   "id": "df69f48e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 1\n",
-      "-1247.399162011892\n",
-      "-1273.196396347034\n",
-      "-1369.9172829888848\n",
-      "-745.0342451826012\n",
-      "-933.7879781464849\n",
-      "-888.5946398054024\n",
-      "-1348.2358029632105\n",
-      "-1096.6832922967494\n",
-      "-1220.3658330669127\n",
-      "-995.5005300133037\n",
-      "-1004.8805461737124\n",
-      "-1094.5553251574474\n",
-      "-826.0765770908499\n",
-      "-929.7276140755843\n",
-      "-1468.1502882687782\n",
-      "-1276.658344742423\n",
-      "-1050.505237773335\n",
-      "-1049.7595145773269\n",
-      "-997.3346530287768\n",
-      "-1235.806292177946\n",
-      "-964.7161695349505\n",
-      "-1016.0045633900661\n",
-      "-830.9747172339751\n",
-      "-1289.1981070821535\n",
-      "-976.924566156271\n",
-      "-998.2806433309122\n",
-      "-1082.9228973767838\n",
-      "-726.6320818272702\n",
-      "-935.2834175489093\n",
-      "-735.0923091635403\n",
-      "-1054.8928112961394\n",
-      "-1052.8944338449573\n",
-      "-951.4523254642942\n",
-      "-1044.8887705595153\n",
-      "-1207.4398281491221\n",
-      "-1012.635172202377\n",
-      "-1073.8836220922876\n",
-      "-988.3176195490391\n",
-      "-779.5707305226858\n",
-      "-994.0276121994046\n",
-      "-1395.456015282512\n",
-      "-1014.9429141330307\n",
-      "-1047.4996155471986\n",
-      "-1068.5563713845265\n",
-      "-1173.8043278655805\n",
-      "-1271.606555327386\n",
-      "-1081.4146145770972\n",
-      "-1189.6971669204038\n"
+      "2 1\n"
      ]
     }
    ],
@@ -146,7 +98,7 @@
     "t.autograd.set_detect_anomaly(True)\n",
     "\n",
     "class Value_State(nn.Module):\n",
-    "    def __init__(self, dim_state, fc1, fc2, alpha=1e-4):\n",
+    "    def __init__(self, dim_state, fc1, fc2, alpha=1e-3):\n",
     "        super(Value_State, self).__init__()\n",
     "        self.dim_state = dim_state\n",
     "        self.model = nn.Sequential(nn.Linear(dim_state, fc1),\n",
@@ -165,10 +117,13 @@
     "\n",
     "\n",
     "class Actor(nn.Module):\n",
-    "    def __init__(self,dim_action, dim_state, fc1, fc2, alpha=1e-4):\n",
+    "    def __init__(self,dim_action, dim_state, fc1, fc2, min_action, max_action, alpha=1e-4, var=1):\n",
     "        super(Actor, self).__init__()\n",
     "        self.dim_action = dim_action\n",
     "        self.dim_state = dim_state\n",
+    "        self.min_action = min_action\n",
+    "        self.max_action = max_action\n",
+    "        self.var = var\n",
     "        self.linear1 = nn.Linear(dim_state, fc1)\n",
     "        self.linear2 = nn.Linear(fc1, fc2)\n",
     "        \n",
@@ -183,12 +138,13 @@
     "        output = f.relu(self.linear1(output))\n",
     "        output = f.relu(self.linear2(output))\n",
     "        \n",
-    "        mu = self.mu(output)\n",
-    "        sigma = t.exp(self.sigma(output))\n",
+    "        mu = t.clamp(self.mu(output), self.min_action, self.max_action)\n",
+    "        #sigma = t.exp(self.sigma(output))\n",
+    "        sigma = t.tensor(self.var, dtype=t.float)\n",
+    "        #sigma = t.abs(t.tensor(self.min_action, dtype=t.float)) # try to use fixed std\n",
     "       \n",
     "        p = Normal(mu, sigma)\n",
     "        action = p.sample()\n",
-    "        #print('action: ', action)\n",
     "        log_prob = p.log_prob(action)\n",
     "        \n",
     "        return action, log_prob\n",
@@ -219,13 +175,17 @@
     "        \n",
     "\n",
     "class Agent():\n",
-    "    def __init__(self,env, dim_action, dim_state, fc1, fc2, alpha=1e-4, max_iters=1000, elipson=0.2, rollouts=20, len_rollouts=40,epoch=10,beta=0.1, mode='clip'):\n",
-    "        #mode: 1: 'clip': clip version \n",
+    "    def __init__(self,env, dim_action, dim_state, fc1, fc2, alpha, \\\n",
+    "                 min_action, max_action, max_iters=1000, elipson=0.2, rollouts=20, len_rollouts=40,epoch=10,beta=0.1, mode='clip'):\n",
+    "        ##########################################################\n",
+    "        #mode: \n",
+    "        #      1: 'clip': clip version \n",
     "        #      2: 'trpo': trust region\n",
     "        #      3: 'noclip': not clip version\n",
-    "        self.actor = Actor(dim_action, dim_state, fc1, fc2)\n",
+    "        ##########################################################\n",
+    "        self.actor = Actor(dim_action, dim_state, fc1, fc2, min_action, max_action,)\n",
     "        \n",
-    "        self.actor_current = Actor(dim_action, dim_state, fc1, fc2)\n",
+    "        self.actor_current = Actor(dim_action, dim_state, fc1, fc2, min_action, max_action,)\n",
     "        self.actor_current.load_state_dict(self.actor.state_dict())\n",
     "        \n",
     "        self.critic = Value_State(dim_state, fc1, fc2,)\n",
@@ -260,28 +220,19 @@
     "                action, log_prob=self.select_action(state)\n",
     "                state_new, reward, done, _ = self.env.step(action)\n",
     "                self.buffer.push(state, reward, log_prob.cpu().detach().item(), state_new)\n",
+    "                state = state_new #Need to update the state for next action\n",
     "        return \n",
     "    \n",
     "    def update(self):\n",
     "        self.rollout() #populate the buffer\n",
     "\n",
     "        for i in range(self.epoch):\n",
-    "            for j in range(0, self.rollouts*self.len_rollouts, self.len_rollouts):                \n",
-    "            \n",
-    "                #1: Critic update\n",
-    "                target = t.tensor(self.buffer.rewards[j:j+self.len_rollouts],dtype=t.float).view(-1, 1) + self.critic(t.tensor(self.buffer.states_new[j:j+self.len_rollouts],dtype=t.float))\n",
-    "                value = self.critic(t.tensor(self.buffer.states[j:j+self.len_rollouts], dtype=t.float))\n",
-    "                advantage = target - value\n",
-    "                loss_critic = self.loss(target, value)\n",
+    "            for j in range(0, self.rollouts*self.len_rollouts, self.len_rollouts):   #len_rollouts as length of each batch             \n",
     "\n",
     "                #Actor update\n",
     "                _, log_pi = self.actor(t.tensor(self.buffer.states[j:j+self.len_rollouts], dtype=t.float))\n",
-    "                log_pi_current = t.tensor(self.buffer.log_probs[j:j+self.len_rollouts], dtype=t.float)\n",
-    "                \n",
-    "                pi = t.clamp(t.exp(log_pi), 0.0001, 1)\n",
-    "                pi_current = t.clamp(t.exp(log_pi_current), 0.0001, 1)\n",
-    "                \n",
-    "                ratio = t.clamp(pi / pi_current, -10, 10)\n",
+    "                log_pi_current = t.tensor(self.buffer.log_probs[j:j+self.len_rollouts], dtype=t.float).view(-1, 1) \n",
+    "                ratio = t.exp(log_pi - log_pi_current)\n",
     "                \n",
     "                target = t.tensor(self.buffer.rewards[j:j+self.len_rollouts],dtype=t.float).view(-1, 1) + self.critic(t.tensor(self.buffer.states_new[j:j+self.len_rollouts],dtype=t.float))\n",
     "                value = self.critic(t.tensor(self.buffer.states[j:j+self.len_rollouts], dtype=t.float))\n",
@@ -297,15 +248,22 @@
     "                    loss_actor = (-ratio * advantage).mean()\n",
     "                else:\n",
     "                    raise ValueError(\"You need to porvide a valid mode: clip, trop, noclip\")\n",
-    "\n",
+    "                                \n",
     "                self.actor.optimizer.zero_grad()\n",
     "                loss_actor.backward(retain_graph=False)                \n",
     "                self.actor.optimizer.step()\n",
+    "                            \n",
+    "                #Critic update\n",
+    "                target = t.tensor(self.buffer.rewards[j:j+self.len_rollouts],dtype=t.float).view(-1, 1) + self.critic(t.tensor(self.buffer.states_new[j:j+self.len_rollouts],dtype=t.float))\n",
+    "                value = self.critic(t.tensor(self.buffer.states[j:j+self.len_rollouts], dtype=t.float))\n",
+    "                advantage = target - value\n",
+    "                loss_critic = self.loss(target, value)\n",
     "                \n",
     "                self.critic.optimizer.zero_grad()\n",
     "                loss_critic.backward(retain_graph=False)\n",
     "                self.critic.optimizer.step()     \n",
-    "                \n",
+    "        \n",
+    "        self.actor_current.load_state_dict(self.actor.state_dict())        \n",
     "        self.buffer.clear()\n",
     "        return \n",
     "\n",
@@ -324,18 +282,24 @@
     "                total_reward+=reward\n",
     "            \n",
     "            if i % 50 ==0:\n",
-    "                print(total_reward)\n",
+    "                #print(total_reward)\n",
+    "                pass\n",
     "            reward_list.append(total_reward)\n",
-    "            self.actor_current.load_state_dict(self.actor.state_dict())\n",
+    "            #self.actor_current.load_state_dict(self.actor.state_dict())\n",
     "        x = [i+1 for i in range(self.max_iters)]\n",
     "        self.plot_learning_curve(x, reward_list)\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "    env = gym.make('Pendulum-v1')\n",
+    "    #env = gym.make('Pendulum-v1')\n",
+    "    env = gym.make('MountainCarContinuous-v0')\n",
     "    dim_state = env.observation_space.shape[0]\n",
     "    dim_action = env.action_space.shape[0]\n",
+    "    min_action = env.action_space.low[0]\n",
+    "    max_action = env.action_space.high[0]\n",
+    "\n",
     "    print (dim_state,dim_action )\n",
-    "    agent = Agent(env, dim_action, dim_state, 300, 200, max_iters=3000, mode='clip' )\n",
+    "    #env, dim_action, dim_state, fc1, fc2, alpha=1e-3,min_action, max_action, max_iters=1000, elipson=0.2, rollouts=20, len_rollouts=40,epoch=10,beta=0.1, mode='clip'):\n",
+    "    agent = Agent(env, dim_action, dim_state, 300, 200,5.5e-3, min_action, max_action, max_iters=1000, mode='clip' )\n",
     "    agent.train()\n",
     "           "
    ]
@@ -343,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a45c5a33",
+   "id": "f01b7fdb",
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "76421bbc",
+   "id": "d0a93382",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0d1ba8de",
+   "id": "5ef4184b",
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38a040a3",
+   "id": "5882ecaa",
    "metadata": {},
    "outputs": [],
    "source": []
