--- a/routing/Qlearning_Tabula/DynamicProgramming/DP.ipynb
+++ b/routing/Qlearning_Tabula/DynamicProgramming/DP.ipynb
@@ -495,7 +495,7 @@
     "            for s in range(self.env.num_devices):\n",
     "                v_ = copy(self.V[s])\n",
     "                if s != dest:\n",
-    "                    self.V[s] = -costs[s,self.PI[s]] + self.alpha*self.V[self.PI[s]]  \n",
+    "                    self.V[s] = -costs[s,self.PI[s]] + self.alpha*self.V[self.PI[s]]  #Assuming the policy is determinstic!!\n",
     "                else:\n",
     "                    self.V[s] = -costs[s,self.PI[s]]\n",
     "                self.holder[s] = np.abs(v_ - self.V[s])\n",
